--- a/style.css
+++ b/style.css
@@ -779,6 +779,15 @@ body.minimize_siderbar .navContainer {
     transform: translateY(-40px);
 }
 
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
 
 
 
