--- a/style.css
+++ b/style.css
@@ -1482,10 +1482,12 @@ body.light .play_btn:hover {
         border-radius: 19px;
         display: flex;
         flex-direction: column;
-        gap: 1px;
+        gap: 0px;
+        height: fit-content;
+        margin-bottom: 21px;
     }
 
-    .movie_title_search {
+    s .movie_title_search {
         color: #ffff;
         height: 28px;
         margin: 9px 4px 2px 4px;
