--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -44,30 +44,35 @@ body {
 
 .sidenav {
     height: 100vh;
-    width: 5rem;
+    width: 4rem;
     display: flex;
     flex-direction: column;
-    background-color: #151728;
     overflow: hidden;
     position: fixed;
-    border: solid #5e595947;
-    border-width: 0 1px 0px 0px;
     height: 100%;
     transition-duration: 0.2s;
     transition-timing-function: ease-out;
     z-index: 2;
-
-
+    background-color: #33373e;
+    padding: 0 0 0 2px;
 }
+
+
+.sidenav_2 {
+    width: 5rem;
+}
+
 
 .sidenavlinks {
     display: flex;
     align-items: center;
-    gap: 13px;
+    gap: 44px;
     width: fit-content;
     cursor: pointer;
     text-decoration: none;
 }
+
+
 
 .arrow_left {
     display: none;
@@ -104,12 +109,10 @@ body {
 }
 
 .pathh {
-    fill: white;
+    fill: #ffffff;
 }
 
-.hamburger:hover .pathh {
-    fill: rgb(180, 180, 180);
-}
+
 
 .menu {
     margin-left: 0rem;
@@ -121,7 +124,8 @@ body {
 .menu_ul {
     display: flex;
     flex-direction: column;
-    gap: 26px
+    gap: 26px;
+    margin-left: 5rem;
 }
 
 .menu_title {
@@ -134,55 +138,29 @@ body {
     display: none;
 }
 
-.menu_ul li {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    gap: 13px;
-    width: fit-content;
-    cursor: pointer;
-
-}
 
 .bi {
-    background-color: #2b2b4e;
-    padding: 9px;
-    border-radius: 8px;
     cursor: pointer;
 }
 
 .path {
-    fill: white;
+    fill: #287bff;
+    color: white;
 }
 
-
-.menu_ul li:hover .bi {
-    background-color: #ffff;
-}
-
-.menu_ul li:hover .path {
-    fill: rgb(0, 0, 0);
-}
-
-.menu_ul li:hover .title_span {
-    color: #ffff;
-    font-size: 15.3px;
-}
 
 .menu_ul li span {
     color: #ffffff9e;
     font-size: 15px;
     font-weight: 500;
     letter-spacing: 0px;
-    display: none;
+    /* display: none;*/
 }
 
 
 
 
 body.minimize_siderbar .sidenav {
-    border: solid #343434;
-    border-width: 0 1px 0px 0px;
     width: 14rem;
     transition-duration: 0.2s;
     transition-timing-function: linear;
@@ -190,7 +168,7 @@ body.minimize_siderbar .sidenav {
 }
 
 body.minimize_siderbar .sidenav_container {
-    width: 14rem;
+    width: 16rem;
     transition-duration: 0.2s;
     transition-timing-function: linear;
 }
@@ -228,6 +206,22 @@ body.minimize_siderbar .menu {
     display: block;
 }
 
+
+body.minimize_siderbar .menu_ul {
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+    margin-left: 0rem;
+}
+
+
+
+body.minimize_siderbar .sidenavlinks {
+
+    gap: 15px;
+}
+
+
 body.minimize_siderbar .section_one {
     margin-left: 1rem;
     transition-duration: 0.2s;
@@ -259,14 +253,7 @@ body.minimize_siderbar .movieDetailnavContainer {
 }
 
 
-body.minimize_siderbar .sidenav2 {
-    border-style: solid;
-    border-color: rgb(215 215 215 / 29%);
-    border-width: 0px 1px 0px 0px;
-    transition-duration: 0.2s;
-    transition-timing-function: linear;
 
-}
 
 body.minimize_siderbar .sidenav_child_container {
     width: 14rem;
@@ -283,7 +270,7 @@ body.minimize_siderbar .section_one_movieDetail {
 
 
 .section_one {
-    margin-left: 2rem;
+    margin-left: 1rem;
     transition-duration: 0.3s;
     transition-timing-function: linear;
     overflow: hidden;
@@ -314,6 +301,7 @@ body.minimize_siderbar .section_one_movieDetail {
     margin: 0 0 0 0px;
     transition-duration: 0.2s;
     transition-timing-function: ease-out;
+    backdrop-filter: blur(4px);
 }
 
 
@@ -504,7 +492,7 @@ body.minimize_siderbar .section_one_movieDetail {
     overflow-y: hidden;
     transition-duration: 0.5s;
     transition-timing-function: linear;
-    height: 19rem;
+    height: 20rem;
     position: relative;
 
 }
@@ -613,11 +601,10 @@ body.minimize_siderbar .section_one_movieDetail {
 }
 
 .arrowbtn {
-
     position: absolute;
     bottom: 154px;
-    width: 23px;
-    height: 24px;
+    width: 45px;
+    height: 43px;
     fill: rgb(0, 0, 0);
     cursor: pointer;
     background-color: rgb(219 219 219 / 64%);
@@ -638,7 +625,7 @@ body.minimize_siderbar .section_one_movieDetail {
 }
 
 .rightarrowindex {
-    right: 61px;
+    right: 46px;
 }
 
 
@@ -771,19 +758,6 @@ body.minimize_siderbar .section_one_movieDetail {
 
 
 
-.sidenav2 {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(21 23 40);
-    border-style: solid;
-    border-color: rgba(94, 89, 89, 0.28);
-    border-width: 0px 1px 0px 0px;
-    transition-duration: 0.2s;
-    transition-timing-function: ease-out;
-    z-index: 2;
-    height: 100%;
-}
-
 
 
 .movieDetailnav_paremt_conatainer {
@@ -793,12 +767,13 @@ body.minimize_siderbar .section_one_movieDetail {
 .movieDetailnavContainer {
     z-index: 3;
     background-color: rgb(21 23 40 / 0%);
-
+    backdrop-filter: blur(0px);
     left: 80px;
 }
 
 .bgadd {
     background-color: rgb(35 38 60);
+    backdrop-filter: blur(4px);
 }
 
 .movie_details {
@@ -944,15 +919,11 @@ body.light .bgadd {
 
 
 body.light .sidenav {
-    background-color: #EEEEEE;
-}
-
-body.light .sidenav2 {
-    background-color: #EEEEEE;
+    background-color: #287bff;
 }
 
 body.light .pathh {
-    fill: rgb(133, 133, 133);
+    fill: #ffff;
 }
 
 body.light .bi {
@@ -964,20 +935,18 @@ body.light .path {
     fill: #646464;
 }
 
-body.light .menu_ul li:hover .bi {
-    background-color: #222121;
-}
+
 
 body.light .menu_ul li:hover .path {
-    fill: #fafafa;
+    fill: #287bff;
 }
 
 body.light .menu_ul li:hover .title_span {
-    color: #111111;
+    color: #287bff;
 }
 
 body.light .arrow_left {
-    fill: #838383;
+    fill: #ffff;
 }
 
 body.light .arrow_left:hover {
@@ -985,17 +954,19 @@ body.light .arrow_left:hover {
 }
 
 body.light .title_span {
-    color: #7e7d7d;
+    color: #f1f1f1;
 }
 
 
 body.light .title {
-    color: #353434;
+    color: #ffffff;
 }
 
 body.light .menu_title {
-    color: #353434;
+    color: #ffff;
 }
+
+
 
 body.light .home_header {
     color: rgb(61, 61, 61);
@@ -1091,24 +1062,44 @@ body.light .play_btn {
 body.light .play_btn:hover {
     background-color: rgba(0, 0, 0, 0.801);
     color: #ffff;
-
-
 }
 
 
 
-
-
-
-
-.sidenavlinks {
-    display: flex;
-    align-items: center;
-    gap: 13px;
-    width: fit-content;
-    cursor: pointer;
-    text-decoration: none;
+body.light .menu ul li.hovered .title_span,
+body.light .menu ul li.hovered .path {
+    color: #287bff;
+    fill: #287bff;
 }
+
+
+
+body.light .bi {
+    background-color: #ffffff;
+    box-shadow: 0 0 0 0
+}
+
+body.light .bi {
+    background-color: #ffffff00;
+    box-shadow: 0 0 0 0;
+}
+
+body.light .path {
+    fill: #ffffff;
+}
+
+
+body.light .title_span {
+    color: #ffffff;
+}
+
+
+body.light .menu ul li:hover,
+body.light .menu ul li.hovered {
+    background: #ffff;
+}
+
+
 
 .playLink {
     text-decoration: none;
@@ -1310,7 +1301,7 @@ body.light .play_btn:hover {
         transform: translateX(0px);
         margin: 0;
         width: 96%;
-        height: 16rem;
+        height: 17rem;
     }
 
     .leftarrow {
@@ -1359,7 +1350,7 @@ body.light .play_btn:hover {
         margin-right: 9px;
     }
 
-    .hamburgerphonedeactive {
+    phonedeactive {
         display: none;
     }
 
@@ -1380,6 +1371,10 @@ body.light .play_btn:hover {
         transition-timing-function: linear;
     }
 
+
+    body.light .pathh {
+        fill: rgb(136, 136, 136);
+    }
 
     .overlay_side_navabar_activate {
         display: block;
@@ -1593,4 +1588,99 @@ body.light .play_btn:hover {
     100% {
         top: 50%;
     }
+}
+
+
+.menu_ul li {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 0px;
+    width: fit-content;
+    cursor: pointer;
+    width: 100%;
+    color: white;
+    padding: 8px 0px 10px 18px;
+    border-radius: 30px 0 0 30px;
+    z-index: 3;
+}
+
+
+body.light .menu ul li:hover a ::before,
+body.light .menu ul li.hovered a ::before {
+    content: " ";
+    position: absolute;
+    right: 0px;
+    width: 50px;
+    height: 55px;
+    border-radius: 50%;
+    background: transparent;
+    box-shadow: 35px 35px 0 10px #ffff;
+    transform: translateX(1px) translateY(-64px);
+}
+
+.menu ul li:hover a ::before,
+.menu ul li.hovered a ::before {
+    content: " ";
+    position: absolute;
+    right: 0px;
+    width: 50px;
+    height: 55px;
+    border-radius: 50%;
+    background: transparent;
+    box-shadow: 35px 35px 0 10px #151728;
+    transform: translateX(1px) translateY(-64px);
+}
+
+
+
+
+
+
+body.light .menu ul li:hover a ::after,
+body.light .menu ul li.hovered a ::after {
+    content: " ";
+    position: absolute;
+    right: 0px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgb(158, 20, 20);
+    background: transparent;
+    box-shadow: 35px -35px 0 10px #ffff;
+    transform: translateX(0px) translateY(31px);
+}
+
+.menu ul li:hover a ::after,
+.menu ul li.hovered a ::after {
+    content: " ";
+    position: absolute;
+    right: 0px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgb(158, 20, 20);
+    background: transparent;
+    box-shadow: 35px -35px 0 10px #151728;
+    transform: translateX(0px) translateY(31px);
+}
+
+
+
+
+
+.menu ul li:hover,
+.menu ul li.hovered {
+    background: #151728;
+
+}
+
+.menu ul li:hover .path {
+    fill: #ffff;
+}
+
+.menu ul li.hovered .title_span,
+.menu ul li.hovered .path {
+    color: #ffff;
+    fill: #ffff;
 }
