--- a/style.css
+++ b/style.css
@@ -483,7 +483,8 @@ body.minimize_siderbar .section_one_movieDetail {
 
 .Now_playing_movies_div,
 .current_popular_movies_div,
-.Top_rated_movies_div {
+.Top_rated_movies_div,
+.Casdiv {
     padding: 14px 41px 9px 0px;
     margin: 13px 35px 30px 0px;
     display: flex;
@@ -515,6 +516,9 @@ body.minimize_siderbar .section_one_movieDetail {
     display: none;
 }
 
+.Casdiv::-webkit-scrollbar {
+    display: none;
+}
 
 .current_popular_movies_div::-webkit-scrollbar {
     display: none;
@@ -1295,7 +1299,8 @@ body.light .menu ul li.hovered {
 
     .Now_playing_movies_div,
     .current_popular_movies_div,
-    .Top_rated_movies_div {
+    .Top_rated_movies_div,
+    .Casdiv {
         padding: 15px 0px 6px 0px;
         margin: 13px 35px 30px 13px;
         transform: translateX(0px);
@@ -1451,7 +1456,7 @@ body.light .menu ul li.hovered {
         word-spacing: 1px;
         transform: translateY(-93px);
         margin-left: 0;
-        margin: 0px 0 0 35px;
+        margin: 0px 0 0 26px;
     }
 
     .Now_playing_movies_container_movieDetail {
@@ -1459,7 +1464,8 @@ body.light .menu ul li.hovered {
         margin-left: 14px;
     }
 
-    .Now_playing_movies_div_movieDetail {
+    .Now_playing_movies_div_movieDetail,
+    .Casdiv {
         margin: 13px 29px 30px 9px;
     }
 
@@ -1683,4 +1689,24 @@ body.light .menu ul li.hovered a ::after {
 .menu ul li.hovered .path {
     color: #ffff;
     fill: #ffff;
+}
+
+.name_character_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.name_character_container p {
+    height: 22px;
+}
+
+
+.casteecharacter {
+    font-size: 13px;
+    color: #a7a7a7;
+}
+
+.Casdiv {
+    height: 21rem;
 }
