width issue fixed

--- a/style.css
+++ b/style.css
@@ -1746,7 +1746,7 @@ body.light .menu ul li.hovered a ::after {
     height: 21rem;
 }
 
-.section_two {
+.section_twoo {
     margin: 20px 50px 19px 55px;
 }
 
